# merkle-distributor

./: .gitignore  .gitmodules  .npmignore  Anchor.toml  README.md  package.json
data/: airdrop-amounts.json
programs/merkle-distributor/: Cargo.toml
programs/merkle-distributor/src/: lib.rs  merkle_proof.rs
scripts/: claim.ts  create-distributor.ts  create-distributors.ts  create-dummy-jsons.ts  create-specific-distributor.ts  edit-distributor-claim-windows.ts  generate-token.ts  initialize-staking-contract.ts  private_key_converter.ts  update.ts
scripts/fake-trees/: 2.json  3.json  4.json  5.json  6.json  7.json  9.json  a.json  b.json  d.json  f.json  h.json
scripts/trees/: 2_base.json  2_community.json  3_base.json  3_community.json  4_base.json  4_community.json  5_community.json  6_base.json  6_community.json  7_base.json  7_community.json  8.json  8_base.json  8_community.json  9_base.json  9_community.json  a_base.json  a_community.json  b_base.json  b_community.json  c.json  c_community.json  d_base.json  d_community.json  e.json  e_base.json  e_community.json  f_base.json  f_community.json  g.json  g_base.json  g_community.json  h_base.json  h_community.json
src/: constants.ts  index.ts  pda.ts  sdk.ts  types.ts  wrapper.ts
src/utils/: balance-tree.ts  index.ts  parse-balance-map.ts  tx.ts
tests/: big-tree.spec.ts  big-tree.ts  distributor-early-and-late-claim.ts  merkle-distributor.spec.ts  merkle-distributor.ts  merkle-stake.ts  parse-balance-map.ts  png-merkle-distributor.ts  size-one-tree.ts  testutils.ts  utils.ts
