[package]
name = "merkle-distributor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
zeta-staking = { path = "../../deps/zeta-staking/programs/zeta-staking", features = ["cpi"] }
anchor-lang = {version = "0.29", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
